# GameOfLife

./: Application.cpp  CMakeLists.txt  GameOfLife.cpp  Game_Of_Life_v1.cpp  NetworkManager.cpp  README.md  client_gui.py  main.cpp  run.bat
include/: Application.h  GameOfLife.h  NetworkManager.h
